--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "gera": "webpack -w" 
+    "dev": "webpack -w"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +14,14 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "babel-loader": "^10.0.0",
-    "core-js": "^2.6.12",
-    "regenerator-runtime": "^0.14.1",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "core-js": "^3.41.0",
+    "css-loader": "^7.1.2",
+    "regenerator-runtime": "^0.14.1",
+    "style-loader": "^4.0.0",
+    "webpack-model": "file:"
   }
 }
